Colored HTML Assembly Rendering (#66)
* Add RenderHTML methods to TreeRendererAPIV

* Initial colored rendering

* Add AttributeAPIV class to display attributes

* Made TreeRendererAPIV base class

* Address non-test-related code review comments

* Fix spacing

* Add HTML rendering tests

* Change punctuation rendering, update font to span

* Match standard rendering approach for punctuation

--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
@@ -3,6 +3,4 @@
 @{
     ViewData["Title"] = "Review";
 }
-
-<pre>@Html.Raw(Model.AssemblyModel.Replace("\r\n", "<br />"))</pre>
-
+<pre>@Html.Raw(Model.AssemblyModel)</pre>
