--- a/src/dotnet/APIView/APIViewWeb/wwwroot/css/site.css
+++ b/src/dotnet/APIView/APIViewWeb/wwwroot/css/site.css
@@ -54,3 +54,30 @@ body {
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
 }
+
+/* Code rendering classes
+------------------------------------------------- */
+.keyword {
+    color: blue;
+}
+
+.type {
+    color: #B93D3D;
+}
+
+.class {
+    color: #00B8B1;
+}
+
+.specialName {
+    color: #A400EB;
+    font-weight: bold;
+}
+
+.name {
+    color: black;
+}
+
+.value {
+    color: #00B80F;
+}
