GitHub Authentication in APIView (#122)
* Rudimentary login and comments tagged with username

* Account-based permission restrictions

* Clean up assembly listing page

* Enforce authorization on /Pages/Assemblies pages

* Add unauthorized page, proper sign-out, and avatar tag helper

* Username link and timestamp tag helpers added

* Add extension method for GitHub login, clean up

--- a/src/dotnet/APIView/APIViewWeb/Pages/Shared/_Layout.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Shared/_Layout.cshtml
@@ -13,30 +13,32 @@
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"
               crossorigin="anonymous"
-              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"/>
+              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" />
     </environment>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-light border-bottom mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Assemblies/Index">APIView</a>
+                <span class="navbar-brand">APIView</span>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
+                        @if (User.Identity.IsAuthenticated) {
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Assemblies/Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Assemblies/Index">Reviews</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Assemblies/Upload">Upload</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a asp-action="Logout" asp-controller="Account" class="nav-link text-dark">Log Out</a>
                         </li>
+                        }
                     </ul>
                 </div>
             </div>
