--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Delete.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Delete.cshtml
@@ -4,14 +4,11 @@
     ViewData["Title"] = "Delete";
 }
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete @Model.AssemblyName?</h3>
 <br />
 <form method="post">
-    <input type="hidden" asp-for="AssemblyContent" />
+    <input type="hidden" />
     <input type="submit" value="Delete" class="btn btn-danger" /> |
     <a asp-page="./Index">Back to List</a>
 </form>
-<br />
-<hr />
-<pre>@Html.Raw(Model.AssemblyContent)</pre>
 
