--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Index.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Index.cshtml
@@ -1,23 +1,38 @@
 ﻿@page
 @model APIViewWeb.Pages.Assemblies.IndexModel
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Home page";
 }
 
-@foreach (var assembly in Model.Assemblies)
-{
-    <tr>
-        <td>
-            @Html.Raw(assembly.name)
-        </td>
-        <td>
-            <a asp-page="./Review" asp-route-id="@assembly.id">Review</a>
-        </td>
-        <td>
-            <a asp-page="./Delete" asp-route-id="@assembly.id">Delete</a>
-        </td>
-    </tr>
-    <br />
-}
+<table class="table table-hover">
+    <thead>
+        <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Uploader</th>
+            <th></th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var assembly in Model.Assemblies)
+        {
+            <tr>
+                <td>
+                    <a asp-page="./Review" asp-route-id="@assembly.Id">@assembly.Name</a>
+                </td>
+                <td>
+                    <a username="@assembly.Author">@assembly.Author</a>
+                </td>
+                <td>
+                    <span date="@assembly.TimeStamp.ToLocalTime()"></span>
+                </td>
+                <td>
+                    <a asp-page="./Delete" asp-route-id="@assembly.Id">Delete</a>
+                </td>
+                <td></td>
+            </tr>
+        }
+    </tbody>
+</table>
 
 
