--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
@@ -8,51 +8,66 @@
     <tbody>
         @foreach (var line in Model.AssemblyModel)
         {
-        <tr class="code-line"><td class="code"><span class="code-inner">@Html.Raw(line.DisplayString)</span></td></tr>
-        @foreach (var elementId in Model.Comments.Keys)
-        {
-        @if (elementId == line.ElementId) {
-        <tr class="comment-box">
-            <td class="comment-cell border-top border-bottom" colspan="4">
-                <div class="border comment-holder rounded-1">
-                    <div class="comment-thread-contents">
-                        @foreach (var comment in Model.Comments[elementId]) 
-                        {
-                        <div class="review-comment">
-                            <div class="unminimized-comment">
-                                <h4><strong class="author">Anonymous</strong></h4>
-                                <div class="comment-body">
-                                    <p>@comment.Comment</p>
+            <tr class="code-line"><td class="code"><span class="code-inner">@Html.Raw(line.DisplayString)</span></td></tr>
+            @foreach (var elementId in Model.Comments.Keys)
+            {
+                @if (elementId == line.ElementId)
+                {
+                    <tr class="comment-box">
+                        <td class="comment-cell border-top border-bottom" colspan="4">
+                            <div class="border comment-holder rounded-1">
+                                <div class="comment-thread-contents">
+                                    @foreach (var comment in Model.Comments[elementId])
+                                    {
+                                        <div class="review-comment">
+                                            <div class="unminimized-comment">
+                                                <div class="comment-actions">
+                                                    <form class="comment-delete-button align-top" asp-page-handler="delete" method="post" asp-route-id="@Model.Id">
+                                                        <input type="hidden" name="commentId" value=@comment.Id>
+                                                        <button class="btn align-top"><span class="comment-delete-text align-top">Delete</span></button>
+                                                    </form>
+                                                </div>
+                                                <div class="media">
+                                                    <img username="@comment.Username" class="comment-icon align-self-start mr-3" height="28" width="28" />
+                                                    <div class="media-body">
+                                                        <div>
+                                                            <h4 class="mt-0 comment-header"><strong class="author align-top">@comment.Username</strong></h4>
+                                                            <span date="@comment.TimeStamp.ToLocalTime()" class="comment-timestamp align-top"></span>
+                                                        </div>
+                                                        @comment.Comment
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    }
+                                    <div class="review-thread-reply">
+                                        <div class="reply-cell align-middle">
+                                            <img avatar username="@Model.Username" class="comment-icon" height="28" width="28" />
+                                        </div>
+                                        <div class="reply-cell col-12">
+                                            <button data-element-id="@line.ElementId" type="button" class="review-thread-reply-button text-muted text-left form-control">Reply...</button>
+                                        </div>
+                                    </div>
                                 </div>
-                                <form class="comment-delete-button" asp-page-handler="delete" method="post" asp-route-id="@Model.Id">
-                                    <input type="hidden" name="commentId" value=@comment.Id>
-                                    <button class="btn btn-outline-dark">Delete</button>
-                                </form>
                             </div>
-                        </div>
-                        }
-                        <div class="review-thread-reply">
-                            <button data-element-id="@line.ElementId" type="button" class="review-thread-reply-button text-muted text-left form-control">Reply...</button>
-                        </div>
-                    </div>
-                </div>
-            </td>
-        </tr>
-        }
-        }
+                        </td>
+                    </tr>
+                }
+            }
         }
     </tbody>
 </table>
 
-<br />
 <div id="comment-form-template">
-    <div class="comment-form new-thread-comment">
+    <div class="comment-form border-top new-thread-comment">
         <form class="new-thread-comment-form comment" method="post" asp-route-id="@Model.Id">
+            <input type="hidden" asp-for="Comment.TimeStamp" value="@DateTime.UtcNow" />
+            <input type="hidden" asp-for="Comment.Username" value="@Model.Username" />
             <input type="hidden" asp-for="Comment.ElementId" class="id-box" />
             <div class="new-comment-content">
                 <textarea class="new-thread-comment-text form-control" asp-for="Comment.Comment" rows="3"></textarea>
             </div>
-            <button type="submit" name="submit" value="Submit" class="thread-comment-submit btn btn-outline-dark">Add Comment</button>
+            <button type="submit" name="submit" value="Submit" class="comment-submit-button btn btn-outline-dark">Add Comment</button>
             <button type="button" name="cancel" value="Cancel" class="comment-cancel-button btn btn-outline-dark">Cancel</button>
         </form>
     </div>
