--- a/src/dotnet/APIView/APIViewWeb/wwwroot/css/site.css
+++ b/src/dotnet/APIView/APIViewWeb/wwwroot/css/site.css
@@ -2,57 +2,60 @@
 for details on configuring this project to bundle and minify static web assets. */
 
 a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
 }
 
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
+
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .border-top {
-  border-top: 1px solid #e5e5e5;
+    border-top: 1px solid #e5e5e5;
 }
+
 .border-bottom {
-  border-bottom: 1px solid #e5e5e5;
+    border-bottom: 1px solid #e5e5e5;
 }
 
 .box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
 
 button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
+    font-size: 1rem;
+    line-height: inherit;
 }
 
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
 }
+
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  line-height: 60px; /* Vertically center the text there */
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    line-height: 60px; /* Vertically center the text there */
 }
 
 /* Code rendering classes
@@ -94,6 +97,12 @@ form.comment {
     display: none;
 }
 
+.comment-actions {
+    float: right;
+    margin-left: 10px;
+    margin-right: -5px;
+}
+
 .comment-box {
     border: 1px solid gray;
     border-spacing: 0;
@@ -101,17 +110,54 @@ form.comment {
     background-color: white;
 }
 
+.comment-cancel-button {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 14px;
+}
+
 .comment-cell {
     padding: 10px;
     vertical-align: top;
+}
+
+.comment-delete-button {
+    margin-left: 44px;
+}
+
+.comment-delete-text {
+    color: grey;
+    font-size: 12px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.comment-header {
+    margin-bottom: 0px;
+    line-height: 0.8 !important;
+    display: inline;
 }
 
 .comment-holder {
     max-width: 780px;
 }
 
+.comment-icon {
+    border-radius: 3px;
+    display: inline-block;
+    line-height: 1;
+    overflow: hidden;
+    vertical-align: middle;
+}
+
+.comment-submit-button {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 14px;
+    margin: 0 4px 0;
+}
+
 .comment-timestamp {
     float: right;
+    padding-top: 6px;
+    font-size: 12px;
 }
 
 .review-comment {
@@ -119,9 +165,9 @@ form.comment {
     position: relative;
 }
 
-.review-comment:first-child {
-    padding-top: 3px;
-}
+    .review-comment:first-child {
+        padding-top: 16px;
+    }
 
 .commentable {
     cursor: pointer;
@@ -170,6 +216,8 @@ code-inner {
     border-radius: 0 0 3px 3px;
     border-top: 1px solid #E1E4E8;
     padding: 8px 16px;
+    display: table;
+    width: 100%;
 }
 
 .review-thread-reply-button {
@@ -180,13 +228,24 @@ code-inner {
     width: 100%;
 }
 
+.reply-cell {
+    display: table-cell;
+}
+
 .new-thread-comment {
     border-radius: 3px;
-    font-size: 12px;
     line-height: 1.5;
     border-collapse: separate;
     tab-size: 8;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #F6F8FA;
+}
+
+.new-thread-comment-text {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 14px;
+    background-color: #F6F8FA;
+    max-width: 758px;
 }
 
 .comment-thread-contents.new-thread-comment {
@@ -200,6 +259,16 @@ code-inner {
     margin: 0 4px 8px;
 }
 
-.thread-comment-submit {
-    margin: 0 4px 0;
+.media {
+    margin-bottom: 5px;
+}
+
+.login-button {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 14px;
+}
+
+.info-text {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 14px;
 }
