Partial Updates for Commenting in APIView (#134)
* Hovering over code lines to show button

* Comment button for each commentable line

* Partial page updates for comment submission

* Partial updates for comment deletion

* Remove empty comment threads

* Update thread deletion, fix tests

* Address code review comments

* Hovering behavior with CSS

* Clean up JS

--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Index.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
 @model APIViewWeb.Pages.Assemblies.IndexModel
+@using APIViewWeb
 @{
     ViewData["Title"] = "Home page";
 }
@@ -26,10 +27,13 @@
                 <td>
                     <span date="@assembly.TimeStamp.ToLocalTime()"></span>
                 </td>
+                @if (assembly.Author == User.GetGitHubLogin()) {
                 <td>
                     <a asp-page="./Delete" asp-route-id="@assembly.Id">Delete</a>
                 </td>
+                } else {
                 <td></td>
+                }
             </tr>
         }
     </tbody>
