GitHub Organization Restriction for APIView (#146)
* Pascal case suffixes

* Namespace and sealed type rendering

* Add this keyword to extension method params

* Add GitHub organization authorization

* Fix tests

* Type name changes

* Address code review comments

* Make ignoredAttributeNames static

--- a/src/dotnet/APIView/APIViewWeb/Pages/Unauthorized.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Unauthorized.cshtml
@@ -5,5 +5,5 @@
 *@
 
 <p>You're currently not logged into a GitHub account.</p>
-<p>In order to upload assemblies for review and leave comments, please log in by clicking the button below.</p>
+<p>In order to use the site, please log into an account associated with the <a href="https://github.com/Azure">Azure organization</a> by clicking the button below.</p>
 <a class="login-button btn btn-outline-dark" asp-action="Login" asp-controller="Account">Login with GitHub</a> <img height="30" width="30" src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" />
