--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
@@ -4,29 +4,40 @@
     ViewData["Title"] = "Review";
 }
 
+@if (Model.UpdateAvailable)
+{
+    <div class="alert alert-warning" role="alert">
+        <form asp-page-handler="RefreshModel" class=".form-inline" method="post" asp-route-id="@Model.Id">
+            Your code review uses older format and can be updated
+            <button type="submit" class="btn btn-link">Update model</button>
+        </form>
+    </div>
+}
+
 <table class="code-window border rounded-1">
     <tbody>
-        @foreach (var line in Model.AssemblyModel)
-        {
+    @foreach (var line in Model.Lines)
+    {
         <tr class="code-line">
             <td class="line-comment-button-cell">
                 @if (line.ElementId != null)
                 {
-                <button data-element-id="@line.ElementId" class="btn-link line-comment-button" type="button" style="text-decoration:none;">+</button>
+                    <button data-element-id="@line.ElementId" class="btn-link line-comment-button" type="button" style="text-decoration:none;">+</button>
                 }
             </td>
             <td class="code"><span class="code-inner">@Html.Raw(line.DisplayString)</span></td>
         </tr>
-            @foreach (var elementId in Model.Comments.Keys)
+        @foreach (var elementId in Model.Comments.Keys)
+        {
+            @if (elementId == line.ElementId)
             {
-                @if (elementId == line.ElementId)
-                {
                 <partial name="_CommentThreadPartial" model="@new APIViewWeb.Models.CommentThreadModel() { AssemblyId = Model.Id, Comments = Model.Comments[elementId], LineId = elementId }" />
-                }
             }
         }
+    }
     </tbody>
 </table>
+
 
 <div id="comment-form-template">
     <div class="comment-form border-top new-thread-comment">
