--- a/src/dotnet/APIView/APIViewWeb/Pages/Shared/_CommentThreadPartial.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Shared/_CommentThreadPartial.cshtml
@@ -31,12 +31,12 @@
                                 </div>
                                 <div class="media">
                                     <img username="@comment.Username" class="comment-icon align-self-start mr-3" height="28" width="28" />
-                                    <div class="media-body">
+                                    <div class="media-body comment-contents">
                                         <div>
                                             <h4 class="mt-0 comment-header"><strong class="author align-top">@comment.Username</strong></h4>
                                             <span date="@comment.TimeStamp.ToLocalTime()" class="comment-timestamp align-top"></span>
                                         </div>
-                                        <p class="comment-contents">@comment.Comment</p>
+                                        @Html.FormatAsMarkdown(@comment.Comment)
                                     </div>
                                 </div>
                             </div>
