--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
@@ -14,30 +14,49 @@
     </div>
 }
 
-<table class="code-window border rounded-1">
-    <tbody>
-    @foreach (var line in Model.Lines)
-    {
-        <tr class="code-line">
-            <td class="line-comment-button-cell">
-                @if (line.ElementId != null)
-                {
-                    <button data-element-id="@line.ElementId" class="btn-link line-comment-button" type="button" style="text-decoration:none;">+</button>
-                }
-            </td>
-            <td class="code"><span class="code-inner">@Html.Raw(line.DisplayString)</span></td>
-        </tr>
-        @foreach (var elementId in Model.Comments.Keys)
-        {
-            @if (elementId == line.ElementId)
-            {
-                <partial name="_CommentThreadPartial" model="@new APIViewWeb.Models.CommentThreadModel() { AssemblyId = Model.Id, Comments = Model.Comments[elementId], LineId = elementId }" />
-            }
-        }
-    }
-    </tbody>
-</table>
+<table>
+    <tr>
+        <td class="namespace-view-panel">
+            <div class="namespace-view">
+                <ul class="nav_list">
+                @foreach (var ns in Model.AssemblyModel.AssemblyNode.Navigation) {
+                    <li>
+                        <div><img src="~/icons/down.png"> <b>@ns.Text</b> </div>
+                        <ul class="nav_list_children">
+                            @foreach (var type in ns.Children) {
+                                <li><img src="~/icons/type.png"> @type</li>
+                            }
+                        </ul>
+                    </li>
 
+                }
+                </ul>
+            </div>
+        </td>
+        <td>
+            <table class="code-window border rounded-1">
+                <tbody>
+                    @foreach (var line in Model.Lines) {
+                        <tr class="code-line">
+                            <td class="line-comment-button-cell">
+                                @if (line.ElementId != null) {
+                                    <button data-element-id="@line.ElementId" class="btn-link line-comment-button" type="button" style="text-decoration:none;">+</button>
+                                }
+                            </td>
+                            <td class="code"><span class="code-inner">@Html.Raw(line.DisplayString)</span></td>
+                        </tr>
+                        @foreach (var elementId in Model.Comments.Keys) {
+                            @if (elementId == line.ElementId) {
+                                <partial name="_CommentThreadPartial" model="@new APIViewWeb.Models.CommentThreadModel() { AssemblyId = Model.Id, Comments = Model.Comments[elementId], LineId = elementId }" />
+                            }
+                        }
+                    }
+                </tbody>
+
+            </table>
+        </td>
+    </tr>
+</table>
 
 <div id="comment-form-template">
     <div class="comment-form border-top new-thread-comment">
