--- a/src/dotnet/APIView/APIViewWeb/wwwroot/css/site.css
+++ b/src/dotnet/APIView/APIViewWeb/wwwroot/css/site.css
@@ -320,28 +320,36 @@ code-inner {
     white-space: nowrap;
 }
 
-.namespace-view-panel {
-    vertical-align: top;
-    font-family: 'Lucida Console';
-    font-size: 12px;
-    margin-left: 0px;
-
-}
-
 .namespace-view {
-    margin-right: 30px;
+    font-size: 12px;
+    font-family: monospace;
 }
 
-.nav_list {
+.nav-list {
     list-style-type:none;
     padding-left: 0px;
 }
 
-.nav_list_children {
+.nav-list-children {
     list-style-type: none;
     padding-left: 23px;
+    text-overflow: ellipsis;
+}
+.nav-list-children > li {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
-.container {
-    max-width: none;
+.nav-list-toggle {
+    padding-left: 14px;
+    background: url(/icons/down.png) center left no-repeat;
+}
+
+.nav-list-collapsed > .nav-list-toggle {
+    background: url(/icons/right.png) center left no-repeat;
+}
+
+.nav-list-collapsed > .nav-list-children {
+    display: none;
 }
