--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
@@ -14,52 +14,47 @@
     </div>
 }
 
-<table>
-    <tr>
-        <td class="namespace-view-panel">
-            <div class="namespace-view">
-                <ul class="nav_list">
-                @if(Model.AssemblyModel.AssemblyNode != null) {
-                    @foreach (var ns in Model.AssemblyModel.AssemblyNode.Navigation) {
-                        <li>
-                            <div><img src="~/icons/down.png"> <b>@ns.Text</b> </div>
-                            <ul class="nav_list_children">
-                                @foreach (var type in ns.Children) {
-                                    <li><img src="~/icons/type.png"> @type</li>
-                                }
-                            </ul>
-                        </li>
+<div class="row">
+    <div class="col-2 namespace-view">
+        <ul class="nav-list">
+            @if(Model.AssemblyModel.AssemblyNode != null) {
+                @foreach (var ns in Model.AssemblyModel.AssemblyNode.Navigation) {
+                    <li class="nav-list-group">
+                        <span class="nav-list-toggle"></span><a href="#@ns.NavigationId">@ns.Text</a>
+                        <ul class="nav-list-children">
+                            @foreach (var type in ns.ChildItems) {
+                                <li><img src="~/icons/type.png"> <a href="#@type.NavigationId">@type.Text</a></li>
+                            }
+                        </ul>
+                    </li>
+                }
+            }
+        </ul>
+    </div>
 
+    <div class="col-10">
+        <table class="code-window border rounded-1">
+            <tbody>
+            @foreach (var line in Model.Lines) {
+                <tr class="code-line">
+                    <td class="line-comment-button-cell">
+                        @if (line.ElementId != null) {
+                            <button data-element-id="@line.ElementId" class="btn-link line-comment-button" type="button" style="text-decoration:none;">+</button>
+                        }
+                    </td>
+                    <td class="code"><span class="code-inner">@Html.Raw(line.DisplayString)</span></td>
+                </tr>
+                @foreach (var elementId in Model.Comments.Keys) {
+                    @if (elementId == line.ElementId) {
+                        <partial name="_CommentThreadPartial" model="@new APIViewWeb.Models.CommentThreadModel() { AssemblyId = Model.Id, Comments = Model.Comments[elementId], LineId = elementId }" />
                     }
                 }
-                </ul>
-            </div>
-        </td>
-        <td>
-            <table class="code-window border rounded-1">
-                <tbody>
-                    @foreach (var line in Model.Lines) {
-                        <tr class="code-line">
-                            <td class="line-comment-button-cell">
-                                @if (line.ElementId != null) {
-                                    <button data-element-id="@line.ElementId" class="btn-link line-comment-button" type="button" style="text-decoration:none;">+</button>
-                                }
-                            </td>
-                            <td class="code"><span class="code-inner">@Html.Raw(line.DisplayString)</span></td>
-                        </tr>
-                        @foreach (var elementId in Model.Comments.Keys) {
-                            @if (elementId == line.ElementId) {
-                                <partial name="_CommentThreadPartial" model="@new APIViewWeb.Models.CommentThreadModel() { AssemblyId = Model.Id, Comments = Model.Comments[elementId], LineId = elementId }" />
-                            }
-                        }
-                    }
-                </tbody>
+            }
+            </tbody>
 
-            </table>
-        </td>
-    </tr>
-</table>
-
+        </table>
+    </div>
+</div>
 <div id="comment-form-template">
     <div class="comment-form border-top new-thread-comment">
         <form class="new-thread-comment-form comment" method="post" asp-route-id="@Model.Id">
