assed assembly icon and name

--- a/src/dotnet/APIView/APIViewWeb/wwwroot/css/site.css
+++ b/src/dotnet/APIView/APIViewWeb/wwwroot/css/site.css
@@ -377,3 +377,9 @@ code-inner {
 .type_unknown {
     background: url(/icons/type.png) center left no-repeat;
 }
+
+.assembly_view {
+    font-size: 14px;
+    font-weight: bold;
+    font-family: monospace;
+}
