--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
@@ -14,6 +14,9 @@
     </div>
 }
 
+<div class="assembly_view">
+    <img src="~/icons/assembly.png" />&nbsp;<span>@Model.AssemblyModel.Name</span>
+</div>
 <div class="row">
     <div class="col-2 namespace-view">
         <ul class="nav-list">
