Added the ability to delete bot comments

--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Upload.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Upload.cshtml
@@ -17,7 +17,7 @@
         </label>
     </div>
     <div class="form-check">
-        <input class="form-check-input" asp-for="RunAnalysis" unchecked>
+        <input class="form-check-input" asp-for="RunAnalysis" checked>
         <label class="form-check-label">
             Run static analysis
         </label>
