--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
@@ -14,34 +14,15 @@
     </div>
 }
 
-<div class="assembly_view">
-    <img src="~/icons/assembly.png" />&nbsp;<span>@Model.AssemblyModel.Name</span>
-</div>
+
 <div class="row">
     <div class="col-2 namespace-view">
-        <ul class="nav-list">
-            @if (Model.AssemblyModel.AssemblyNode != null) {
-                @foreach (var ns in Model.AssemblyModel.AssemblyNode.Navigation) {
-            <li class="nav-list-group">
-                <span class="nav-list-toggle"></span><img src="~/icons/namespace.png" />&nbsp;<a href="#@ns.NavigationId">@ns.Text</a>
-                <ul class="nav-list-children">
-                    @foreach (var type in ns.ChildItems) {
-                        <li>
-                            @if (type.Tags != null && type.Tags.ContainsKey("TypeKind")) {
-                                <span class="@type.Tags.GetValueOrDefault("TypeKind")">&nbsp;&nbsp;</span>
-                            }
-                            else {
-                                <span class="type_unknown">&nbsp;&nbsp;</span>
-                            }
-                            <a href="#@type.NavigationId">@type.Text</a>
-                        </li>
-                    }
-                </ul>
-            </li>
-                }
-            }
-            </ul>
-    </div>
+
+        @if (Model.AssemblyModel.AssemblyNode != null)
+        {
+            <partial name="Shared/Navigation" model=" Model.AssemblyModel.AssemblyNode.Navigation"/>
+        }
+     </div>
 
     <div class="col-10">
         <table class="code-window border rounded-1">
