--- a/src/dotnet/APIView/APIViewWeb/wwwroot/css/site.css
+++ b/src/dotnet/APIView/APIViewWeb/wwwroot/css/site.css
@@ -378,8 +378,6 @@ code-inner {
     background: url(/icons/type.png) center left no-repeat;
 }
 
-.assembly_view {
-    font-size: 14px;
-    font-weight: bold;
-    font-family: monospace;
+.type_assembly {
+    background: url(/icons/assembly.png) center left no-repeat;
 }
