--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
@@ -36,6 +36,28 @@
                     </td>
                     <td class="code"><span class="code-inner">@Html.Raw(line.DisplayString)</span></td>
                 </tr>
+                <tr>
+                @if (line.Diagnostics.Any())
+                {
+                    <td></td>
+                    <td class="code-diagnostics">
+                        @foreach (var lineDiagnostic in line.Diagnostics)
+                        {
+                        <p>
+                            @if (lineDiagnostic.Text.StartsWith("DO"))
+                            {
+                                @:✅ <b>DO</b> @lineDiagnostic.Text.Substring(2)
+                            }
+                            else
+                            {
+                                @lineDiagnostic.Text
+                            }
+                            <a href="@lineDiagnostic.HelpLinkUri">Details</a>
+                        </p>
+                        }
+                    </td>
+                }
+                </tr>
                 @foreach (var elementId in Model.Comments.Keys) {
                     @if (elementId == line.ElementId) {
                         <partial name="_CommentThreadPartial" model="@new APIViewWeb.Models.CommentThreadModel() { AssemblyId = Model.Id, Comments = Model.Comments[elementId], LineId = elementId }" />
