--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{id?}"
-@model APIViewWeb.Pages.Assemblies.ReviewModel
+@model APIViewWeb.Pages.Assemblies.ReviewPageModel
 @{
     ViewData["Title"] = "Review";
 }
@@ -18,9 +18,9 @@
 <div class="row">
     <div class="col-2 namespace-view">
 
-        @if (Model.AssemblyModel.AssemblyNode != null)
+        @if (Model.CodeFile != null)
         {
-            <partial name="Shared/Navigation" model=" Model.AssemblyModel.AssemblyNode.Navigation"/>
+            <partial name="Shared/Navigation" model=" Model.CodeFile.Navigation"/>
         }
      </div>
 
